# python-project-49

./: .gitignore  Makefile  README.md  Step_5.cast  Step_6.cast  Step_7  demo.cast  pyproject.toml
brain_games/: answer.py  cli.py  engine.py  greeting.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/tasks/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/tasks/: calc.py  even.py  gcd.py  prime.py  progression.py
