[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games"
authors = ["Evgeny <info@tinamagic.lv>"]
readme = "README.md"
classifiers = ["Topic :: Software Development :: Games"]
repository = "https://github.com/EvgenyAleksov/python-project-49"

packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:play_even"
brain-calc = "brain_games.scripts.brain_calc:play_calc"
brain-gcd = "brain_games.scripts.brain_gcd:play_gcd"
brain-progression = "brain_games.scripts.brain_progression:play_progression"
brain-prime = "brain_games.scripts.brain_prime:play_prime"